# ponddy-auth

./: .editorconfig  .gitignore  .python-version  Makefile  README.md  deploy.txt  develop.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
core/: mocks.py  settings.py  tests.py  urls.py
ponddy_auth/: authentication.py  utils.py
requirements/: base.in  base.txt  deploy.in  deploy.txt  develop.in  develop.txt  test-ci.txt
src/core/: mocks.py  settings.py  tests.py  urls.py  views.py  wsgi.py
src/ponddy_auth/: apps.py  authentication.py  permissions.py  utils.py
tests/core/: mocks.py  settings.py  tests.py  urls.py
